2010-04-02  Shachar Shemesh <thesun@users.sourceforge.net>
        * [r73] Fix a one off buffer overrun: reported by Christian Jaeger
          http://bugs.debian.org/576244

2007-06-16  Shachar Shemesh <thesun@users.sourceforge.net>

	* [r72] configure.ac: Update version information to 1.1

2007-06-13  Shachar Shemesh <thesun@users.sourceforge.net>

	* [r71] NEWS: Update the NEWS file to announce the release.
	* [r70] README, privbind.1: Update the docs regarding bugs that
	  have been resolved
	* [r69] libprivbind.c: Fix bug on fcntl returning EINTR.

2007-06-12  Shachar Shemesh <thesun@users.sourceforge.net>

	* [r67] ChangeLog, authors: Update the changelog
	* [r66] configure.ac: Update version number to 1.0
	* [r65] privbind.1: Document the "-l" flag in the man page

2007-06-08  Shachar Shemesh <thesun@users.sourceforge.net>

	* [r64] Makefile.am, configure.ac, main.c, test.c: Add multi
	  process and multi thread tests to "test"
	  Add a configure option "--enable-testing", for internal tests in
	  privbind
	  Add optional delay after each bind inside privbind (only if
	  --enable-testing was used)

2007-06-06  Shachar Shemesh <thesun@users.sourceforge.net>

	* [r63] libprivbind.c: Implement mutex - not tested

2007-06-06  Amos Shapira <amosshapira@users.sourceforge.net>

	* [r62] ipc.h, libprivbind.c, main.c: reverted the changes to use
	  mutex (r59) and to send number of calls left (r60)
	  after Shachar mentioned the problem of the application forking
	  and calling
	  bind(2) from both processes
	* [r61] privbind.1: replace "root process" by "helper process".
	  this is the tail of such changes
	  I committed in previous checkin.
	* [r60] ipc.h, libprivbind.c, main.c: the helper process sends the
	  number of calls left together with its reply, so
	  the privbind library can cleanly avoid sending more requests
	* [r59] libprivbind.c: use a mutex to synchronize access to the
	  socket with the helper process
